# winshl-kb

./: .gitignore  .pylintrc  ACKNOWLEDGEMENTS  MANIFEST.in  README.md  dependencies.ini  pyproject.toml  requirements.txt  run_tests.py  setup.cfg  tox.ini  winshl-kb.ini
.github/workflows/: lint.yml  test_docker.yml  test_docs.yml  test_tox.yml
config/appveyor/: install.ps1
docs/: conf.py  index.rst
docs/sources/api/: modules.rst  winshlrc.rst
docs/sources/control-panel-items/: 00f2886f-cd64-4fc9-8ec5-30ef6cdbe8c3.md  0142e4d0-fb7a-11dc-ba4a-000ffe7ab428.md  025a5937-a6be-4686-a844-36fe4bec8b6d.md  05d7b0f4-2121-4eff-bf6b-ed3f69b894d9.md  09f581a3-1f64-4e5b-8db3-88f5593080cc.md  0df44eaa-ff21-4412-828e-260a8728e7f1.md  1206f5f1-0569-412c-8fec-3204630dfb70.md  15eae92e-f17a-4431-9f28-805e482dafd4.md  17cd9488-1228-4b2f-88ce-4298e93e0966.md  2227a280-3aea-1069-a2de-08002b30309d.md  241d7c96-f8bf-4f85-b01f-e2b043341a4b.md  335a31dd-f04b-4d76-a925-d6b47cf360df.md  36eef7db-88ad-4e81-ad49-0e313f0c35f8.md  37efd44d-ef8d-41b1-940d-96973a50e9e0.md  38a98528-6cbf-4ca9-8dc0-b1e1d10f7b1b.md  3e7efb4c-faf1-453d-89eb-56026875ef90.md  4026492f-2f69-46b8-b9bf-5654fc07e423.md  40419485-c444-4567-851a-2dd7bfa1684d.md  58e3c745-d971-4081-9034-86e34b30836a.md  (+59 more)
scripts/: extract.py  generate_docs.py  generate_source.py  merge_yaml.py
test_data/: controlpanel_items.yaml  knownfolders.yaml  shellfolders.yaml
tests/: resource_file.py  yaml_definitions_file.py
utils/: update_release.sh
winshlrc/: __init__.py  extractor.py  resource_file.py  resources.py  volume_scanner.py  yaml_definitions_file.py
winshlrc/data/: defined_controlpanel_items.yaml  defined_knownfolders.yaml  legacy_controlpanel_items.yaml  legay_controlpanel_items.yaml  observed_controlpanel_items.yaml  observed_knownfolders.yaml  observed_shellfolders.yaml
winshlrc/scripts/: extract.py  generate_docs.py  generate_source.py  merge_yaml.py
(+373 files in other folders)
