[metadata]
name = winshlrc
version = 20240317
description = Windows Shell resources (winshlrc)
long_description = winshlrc is a Python module part of winshl-kb to allow reuse of Windows Shell resources.
long_description_content_type = text/plain
url = https://github.com/libyal/winshl-kb
maintainer = Joachim Metz
maintainer_email = joachim.metz@gmail.com
license = Apache License, Version 2.0
license_files =
  ACKNOWLEDGEMENTS
  AUTHORS
  LICENSE
  README
classifiers =
  Development Status :: 2 - Pre-Alpha
  Programming Language :: Python

[options]
install_requires = file:requirements.txt
package_dir =
  winshlrc = winshlrc
packages = find:
python_requires = >=3.8
scripts =
  scripts/generate_docs.py
  scripts/generate_source.py

[options.package_data]
winshlrc =
  data/*.yaml

[options.packages.find]
exclude =
  docs
  tests
  tests.*
  utils
where = .

[bdist_wheel]
universal = 1
